# AgenticResearchPlatform

./: .gitignore  AGENTIC_LOOP_SPEC.md  AGENTS.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CLAUDE.md  EXPERIMENT_PROTOCOL.md  META_CONTROLLER_SPEC.md  NEXT_STEPS.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  RESEARCH_PLATFORM_PLANNING.md  SCORING_SPEC.md  STRATEGY_API.md  paper_session.json  pyproject.toml  run_mvp.py  run_paper.py  run_polymarket.py  run_session.py
agentic_research_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: scoring.yaml  scoring_polymarket.yaml
core/execution/: adapters.py  dispatcher.py  lease.py  planner.py  worker.py
core/multi_agent/: director.py  paper_session.py  worker_agent.py
core/orchestration/: batch.py  campaign.py  resume.py  state_machine.py
core/reproducibility/: fingerprint.py  snapshot.py
core/scheduling/: policy.py  priority_queue.py  quotas.py
data/polymarket/: markets.json
data/trading/: btc_usdt_1d.csv  btc_usdt_30m.csv  eth_usdt_1d.csv  eth_usdt_30m.csv  sample_ohlcv.csv
domains/: base.py
domains/game_economy/: adapter.py  objectives.py
domains/polymarket/: adapter.py  base.py  data_store.py  llm_evaluator.py  paper_session.py  worker.py
domains/trading/: adapter.py
meta/optimizers/: bandit.py  base.py  bayesian.py  factory.py  genetic.py
observability/: metrics.py  tracing.py
persistence/: models.py  repositories.py
scoring/: metrics.py
scripts/: fetch_crypto_data.py  fetch_polymarket_data.py  generate_crypto_data.py
specs/001-research-platform-orchestration/: data-model.md  (+7 more)
(+1140 files in other folders)
