[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "meta*", "data*", "specs*", "config*", "domains*", "scoring*", "persistence*", "observability*"]

[project]
name = "agentic-research-platform"
version = "0.1.0"
description = "Deterministic agentic research orchestration MVP"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
